--- a/src/main/frontend/ui.css
+++ b/src/main/frontend/ui.css
@@ -276,14 +276,24 @@ html.is-mobile {
 }
 
 .ui__icon svg {
-  filter: brightness(0.8);
+  filter: brightness(1);
   transition: filter .15s;
   will-change: filter;
 }
 
 .ui__icon:hover svg {
-  filter: brightness(1);
+  filter: brightness(.8);
   transition-duration: .15s;
+}
+
+.dark-theme {
+    .ui__icon svg {
+        filter: brightness(.8);
+    }
+
+    .ui__icon:hover svg {
+        filter: brightness(1);
+    }
 }
 
 .type-icon {
